feat: update backend validation, api consistency, enhance invoice generation,  frontend flows, pagination, and UX