@@ -1,13 +1,19 @@
 package com.increff.pos.dto;
 
 import com.increff.pos.entity.ProductEntity;
+import com.increff.pos.model.data.PagedResponse;
 import com.increff.pos.model.data.ProductData;
 import com.increff.pos.model.form.ProductForm;
 import com.increff.pos.api.ProductApi;
 import com.increff.pos.exception.ApiException;
 import com.increff.pos.exception.ApiStatus;
+import com.increff.pos.model.form.ProductSearchForm;
 import com.increff.pos.util.ConversionUtil;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -42,11 +48,28 @@ public class ProductDto extends AbstractDto {
         return ConversionUtil.productEntityToData(productApi.updateProduct(productId, product));
     }
 
-    public List<ProductData> getAllProducts() {
-        return productApi.listProductsForEnabledClients()
+    public List<ProductData> getAll() {
+        List<ProductEntity> entities = productApi.getAll();
+        return entities.stream()
+                .map(ConversionUtil::productEntityToData)
+                .toList();
+    }
+
+    public PagedResponse<ProductData> listProducts(ProductSearchForm form) {
+
+        Pageable pageable = PageRequest.of(form.getPage(),
+                form.getPageSize(),
+                Sort.by("productName").ascending()
+        );
+
+        Page<ProductEntity> page = productApi.listProductsForEnabledClients(pageable);
+
+        List<ProductData> data = page.getContent()
                 .stream()
                 .map(ConversionUtil::productEntityToData)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PagedResponse<>(data, page.getTotalElements());
     }
 
     public ProductData getById(Integer id) {
@@ -63,8 +86,7 @@ public class ProductDto extends AbstractDto {
                 .map(ConversionUtil::productFormToEntity)
                 .toList();
 
-        List<ProductEntity> saved =
-                productApi.bulkCreateProducts(entities);
+        List<ProductEntity> saved = productApi.bulkCreateProducts(entities);
 
         return saved.stream()
                 .map(ConversionUtil::productEntityToData)
@@ -72,6 +94,13 @@ public class ProductDto extends AbstractDto {
     }
 
     public List<ProductData> uploadProductsTsv(MultipartFile file) {
+
+        List<ProductForm> forms = parseProductTsv(file);
+
+        return bulkCreateProducts(forms);
+    }
+
+    public List<ProductForm> parseProductTsv(MultipartFile file) {
 
         List<String[]> rows = parse(file);
         List<ProductForm> forms = new ArrayList<>();
@@ -81,24 +110,30 @@ public class ProductDto extends AbstractDto {
 
             if (r.length < 4) {
                 throw new ApiException(
-                    ApiStatus.BAD_DATA,
-                    "Invalid product TSV at line " + (i + 2),
-                    "file",
-                    "Invalid format at line " + (i + 2)
+                        ApiStatus.BAD_DATA,
+                        "Invalid product TSV at line " + (i + 2),
+                        "file",
+                        "Expected at least 4 columns at line " + (i + 2)
                 );
             }
 
-            ProductForm f = new ProductForm();
-            f.setProductName(r[0].trim());
-            f.setMrp(new BigDecimal(r[1].trim()).setScale(2, RoundingMode.HALF_UP));
-            f.setClientId(Integer.parseInt(r[2].trim()));
-            f.setBarcode(r[3].trim());
-            f.setImageUrl(r.length > 4 ? r[4].trim() : null);
+            try {
 
-            forms.add(f);
+                ProductForm form = ConversionUtil.tsvRowToProductForm(r);
+                forms.add(form);
+
+            } catch (NumberFormatException e) {
+                throw new ApiException(
+                        ApiStatus.BAD_DATA,
+                        "Invalid number format at line " + (i + 2),
+                        "file",
+                        "Invalid number format at line " + (i + 2)
+                );
+            }
         }
 
-        return bulkCreateProducts(forms);
+        return forms;
     }
+
 
 }
